--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "^0.23.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
     "style-loader": "^0.13.1",
     "youtube-api-search": "0.0.5"
   },
