--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "style-loader": "^0.13.1",
     "youtube-api-search": "0.0.5"
   },
